Fix some page lines not wrapping correctly.

--- a/parkhang/frontend/app/components/TextDetail/Text.css
+++ b/parkhang/frontend/app/components/TextDetail/Text.css
@@ -38,6 +38,8 @@
 }
 
 .textLine {
+    display: flex;
+    flex-wrap: wrap;
     margin: 0;
     padding: 0;
 }
